--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Nazar Klishch</h1>
     <ul>
         <li>green</li>
+        <li>red</li>
+        <li>blue</li>
     </ul>
 </body>
 </html>
