--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <li>red</li>
         <li>blue</li>
     </ul>
-    <footer>___________</footer>
+    <footer>______Bye!_____</footer>
 </body>
 </html>
